# renda_soft_rasterization

./: CMakeLists.txt  README.md  main.cpp
Header/: Camera.h  Rasterizer.h  Scene.h  Triangle.h  global.h
Source/: Camera.cpp  Rasterizer.cpp  Scene.cpp  Triangle.cpp
